samples/_failures_safe/1761251053_3b80d1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_787aaa0f.c: In function ‘main’:
./samples/SAFE/__tmp_787aaa0f.c:182:9: error: ‘token’ undeclared (first use in this function); did you mean ‘Token’?
  182 |     if (token
      |         ^~~~~
      |         Token
./samples/SAFE/__tmp_787aaa0f.c:182:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_787aaa0f.c:182:14: error: expected ‘)’ at end of input
  182 |     if (token
      |        ~     ^
      |              )
./samples/SAFE/__tmp_787aaa0f.c:182:5: error: expected declaration or statement at end of input
  182 |     if (token
      |     ^~
